<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/espacio1"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/inst1"
        android:layout_width="379dp"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/inst1"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/inst2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/inst2"
        android:textColor="@android:color/background_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inst1" />


    <EditText
        android:id="@+id/edit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="108dp"
        android:ems="10"
        android:hint="Nombre"
        android:inputType="textPersonName"
        android:text="@string/edit_name"
        android:textColor="@android:color/background_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_ap_pat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="Apellido paterno"
        android:inputType="textPersonName"
        android:text="@string/edit_ap_pat"
        android:textColor="@android:color/background_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_name" />

    <EditText
        android:id="@+id/edit_ap_mat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="Apellido materno"
        android:inputType="textPersonName"
        android:text="@string/edit_ap_mat"
        android:textColor="@android:color/background_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_ap_pat" />

    <Button
        android:id="@+id/btn_fechanac"
        android:layout_width="215dp"
        android:layout_height="65dp"
        android:text="@string/btn_fechanac"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="282dp" />

    <TextView
        android:id="@+id/txt_fecha_nac"
        android:layout_width="141dp"
        android:layout_height="41dp"
        android:layout_marginStart="20dp"
        android:hint="Fecha nacimiento"
        android:textColor="@android:color/background_light"
        app:layout_constraintStart_toEndOf="@+id/btn_fechanac"
        tools:layout_editor_absoluteY="290dp" />

    <TextView
        android:id="@+id/resultado_edad"
        android:layout_width="113dp"
        android:layout_height="43dp"
        android:hint="Edad"
        android:textColor="@android:color/background_light"
        tools:layout_editor_absoluteX="260dp"
        tools:layout_editor_absoluteY="402dp" />

</androidx.constraintlayout.widget.ConstraintLayout>