<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/espacio"
    tools:context=".Inicio">

    <Button
        android:id="@+id/btnToMain"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="147dp"
        android:layout_height="65dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="428dp"
        android:background="@android:color/background_light"
        android:text="@string/btnToMain"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/creditos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginBottom="84dp"
        android:text="@string/creditos"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView

        android:layout_width="217dp"
        android:layout_height="72dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="168dp"
        android:text="@string/TextView"
        android:textColor="@android:color/background_light"
        android:textSize="36sp"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>